# mingw-utils

./: ChangeLog  NEWS  configure.ac
dos2unix/: dos2unix.1  dos2unix.c  dos2unix.h
pexports/: hlex.c
reimp/: Makefile.am  reimp.c  reimp.h  util.c
unix2dos/: unix2dos.1  unix2dos.c  unix2dos.h
